Modified image on index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,7 +40,7 @@
 
     <!-- Hero Section -->
     <section class="relative flex flex-col items-center justify-center min-h-[80vh] px-4 py-12 text-center">
-        <img src="/Beinn_Ime.jpg" alt="Scottish Highlands at sunrise" class="absolute inset-0 w-full h-full object-cover object-center opacity-60 rounded-xl pointer-events-none -z-10">
+        <img src="/public/Beinn_Ime.jpg" alt="Scottish Highlands at sunrise" class="absolute inset-0 w-full h-full object-cover object-center opacity-60 rounded-xl pointer-events-none -z-10">
         <div class="relative z-10 max-w-2xl mx-auto">
             <h1 class="text-4xl sm:text-5xl md:text-6xl font-extrabold text-green-900 drop-shadow-lg mb-4">Conquer Every Peak. Track Every Munro.</h1>
             <p class="text-lg sm:text-xl md:text-2xl text-green-800 mb-8 font-medium">Your ultimate ad-free companion for Munro bagging, featuring stunning photography, live trail insights, and a passionate community.</p>
